add_edit_delete_save_alarm

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".TodoEditActivity"
+            android:theme="@style/AppTheme.NoActionBarShadow"/>
+
+        <receiver android:name=".AlarmReceiver"/>
+
     </application>
 
 </manifest>
